src/grammars/.antlr/GrammarParser.java
// Generated from /Users/francisco/Documents/Work/mathex2java-translator/src/grammars/Grammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EXP_TAG=1, FRAC_TAG=2, SQRT_TAG=3, SUMMATION_TAG=4, INFINITY_TAG=5, SUBSTACK_TAG=6, 
		SIN_TAG=7, COS_TAG=8, TAN_TAG=9, ARCSIN_TAG=10, ARCCOS_TAG=11, ARCTAN_TAG=12, 
		SINH_TAG=13, COSH_TAG=14, TANH_TAG=15, LOG_TAG=16, LN_TAG=17, INT_TAG=18, 
		IINT_TAG=19, IIINT_TAG=20, LT_TAG=21, LNEQ_TAG=22, LNEQQ_TAG=23, LE_TAG=24, 
		LEQ_TAG=25, LEQQ_TAG=26, LEQSLANT_TAG=27, GT_TAG=28, GNEQ_TAG=29, GNEQQ_TAG=30, 
		GEQ_TAG=31, GEQQ_TAG=32, GEQSLANT_TAG=33, BEGIN=34, END=35, EQUATION=36, 
		EQUATION_STAR=37, MATRIX=38, LESSER_SYMBOL=39, LESS_EQUAL_SYMBOL=40, GREATER_SYMBOL=41, 
		GREATER_EQUAL_SYMBOL=42, FACTORIAL_SYMBOL=43, JOIN=44, CURLY_LF=45, CURLY_RT=46, 
		UNDERSCORE=47, BREAKLINE=48, EULER_NUMBER=49, BRACKET_LF=50, BRACKET_RT=51, 
		PARENTHESIS_LF=52, PARENTHESIS_RT=53, HAT=54, COMMA=55, VARNAME=56, EQUAL=57, 
		INTEGER=58, DOUBLE=59, PLUS=60, MINUS=61, MULTIPLICATION=62, DIVISION=63, 
		NEWLINE_TAG=64, COMMENT=65, WS=66;
	public static final int
		RULE_chat = 0, RULE_start = 1, RULE_begin = 2, RULE_body = 3, RULE_equation = 4, 
		RULE_matrix = 5, RULE_matrix_line = 6, RULE_math_function = 7, RULE_math_function_def = 8, 
		RULE_math_function_args = 9, RULE_operator = 10, RULE_lesser_operator = 11, 
		RULE_lesser_equal_operator = 12, RULE_greater_operator = 13, RULE_greater_equal_operator = 14, 
		RULE_composed_operations = 15, RULE_operation_element = 16, RULE_base_member = 17, 
		RULE_power_member = 18, RULE_priority_element = 19, RULE_member = 20, 
		RULE_variable = 21, RULE_variable_lower_index = 22, RULE_index_elements = 23, 
		RULE_index_element = 24, RULE_integer = 25, RULE_integer_positive_zero = 26, 
		RULE_integer_negative = 27, RULE_double_type = 28, RULE_double_positive_zero = 29, 
		RULE_double_negative = 30, RULE_factorial = 31, RULE_single_argument_factorial = 32, 
		RULE_complex_argument_factorial = 33, RULE_factorial_element = 34, RULE_integral = 35, 
		RULE_single_integral = 36, RULE_double_integral = 37, RULE_triple_integral = 38, 
		RULE_integral_def = 39, RULE_integral_lower_limit = 40, RULE_integral_upper_limit = 41, 
		RULE_integral_body = 42, RULE_trigonometry = 43, RULE_normal = 44, RULE_inverse = 45, 
		RULE_hyperbolic = 46, RULE_sin = 47, RULE_cos = 48, RULE_tan = 49, RULE_arcsin = 50, 
		RULE_arccos = 51, RULE_arctan = 52, RULE_sinh = 53, RULE_cosh = 54, RULE_tanh = 55, 
		RULE_trigonometric_function_args = 56, RULE_trigonometric_function_power = 57, 
		RULE_summation = 58, RULE_summation_lower_bound = 59, RULE_summation_lower_body = 60, 
		RULE_summation_lower_single_line = 61, RULE_summation_lower_bound_operators = 62, 
		RULE_summation_lower_multiple_line = 63, RULE_summation_upper_bound = 64, 
		RULE_summation_upper_body = 65, RULE_summation_body = 66, RULE_logarithm = 67, 
		RULE_log = 68, RULE_ln = 69, RULE_logarithm_lower_bound = 70, RULE_logarithm_body = 71, 
		RULE_sqrt = 72, RULE_sqrt_root = 73, RULE_sqrt_body = 74, RULE_exponential = 75, 
		RULE_fraction = 76, RULE_numerator = 77, RULE_denominator = 78, RULE_fraction_member = 79, 
		RULE_end = 80, RULE_environment = 81;
	private static String[] makeRuleNames() {
		return new String[] {
			"chat", "start", "begin", "body", "equation", "matrix", "matrix_line", 
			"math_function", "math_function_def", "math_function_args", "operator", 
			"lesser_operator", "lesser_equal_operator", "greater_operator", "greater_equal_operator", 
			"composed_operations", "operation_element", "base_member", "power_member", 
			"priority_element", "member", "variable", "variable_lower_index", "index_elements", 
			"index_element", "integer", "integer_positive_zero", "integer_negative", 
			"double_type", "double_positive_zero", "double_negative", "factorial", 
			"single_argument_factorial", "complex_argument_factorial", "factorial_element", 
			"integral", "single_integral", "double_integral", "triple_integral", 
			"integral_def", "integral_lower_limit", "integral_upper_limit", "integral_body", 
			"trigonometry", "normal", "inverse", "hyperbolic", "sin", "cos", "tan", 
			"arcsin", "arccos", "arctan", "sinh", "cosh", "tanh", "trigonometric_function_args", 
			"trigonometric_function_power", "summation", "summation_lower_bound", 
			"summation_lower_body", "summation_lower_single_line", "summation_lower_bound_operators", 
			"summation_lower_multiple_line", "summation_upper_bound", "summation_upper_body", 
			"summation_body", "logarithm", "log", "ln", "logarithm_lower_bound", 
			"logarithm_body", "sqrt", "sqrt_root", "sqrt_body", "exponential", "fraction", 
			"numerator", "denominator", "fraction_member", "end", "environment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\exp'", "'\\frac'", "'\\sqrt'", "'\\sum'", "'\\infty'", "'\\substack'", 
			"'\\sin'", "'\\cos'", "'\\tan'", "'\\arcsin'", "'\\arccos'", "'\\arctan'", 
			"'\\sinh'", "'\\cosh'", "'\\tanh'", "'\\log'", "'\\ln'", "'\\int'", "'\\iint'", 
			"'\\iiint'", "'\\lt'", "'\\lneq'", "'\\lneqq'", "'\\le'", "'\\leq'", 
			"'\\leqq'", "'\\leqslant'", "'\\gt'", "'\\gneq'", "'\\gneqq'", "'\\geq'", 
			"'\\geqq'", "'\\geqslant'", "'\\begin'", "'\\end'", "'equation'", "'equation*'", 
			"'matrix'", "'<'", "'<='", "'>'", "'>='", "'!'", "'&'", "'{'", "'}'", 
			"'_'", "'\\\\'", "'e'", "'['", "']'", "'('", "')'", "'^'", "','", null, 
			"'='", null, null, "'+'", "'-'", null, "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EXP_TAG", "FRAC_TAG", "SQRT_TAG", "SUMMATION_TAG", "INFINITY_TAG", 
			"SUBSTACK_TAG", "SIN_TAG", "COS_TAG", "TAN_TAG", "ARCSIN_TAG", "ARCCOS_TAG", 
			"ARCTAN_TAG", "SINH_TAG", "COSH_TAG", "TANH_TAG", "LOG_TAG", "LN_TAG", 
			"INT_TAG", "IINT_TAG", "IIINT_TAG", "LT_TAG", "LNEQ_TAG", "LNEQQ_TAG", 
			"LE_TAG", "LEQ_TAG", "LEQQ_TAG", "LEQSLANT_TAG", "GT_TAG", "GNEQ_TAG", 
			"GNEQQ_TAG", "GEQ_TAG", "GEQQ_TAG", "GEQSLANT_TAG", "BEGIN", "END", "EQUATION", 
			"EQUATION_STAR", "MATRIX", "LESSER_SYMBOL", "LESS_EQUAL_SYMBOL", "GREATER_SYMBOL", 
			"GREATER_EQUAL_SYMBOL", "FACTORIAL_SYMBOL", "JOIN", "CURLY_LF", "CURLY_RT", 
			"UNDERSCORE", "BREAKLINE", "EULER_NUMBER", "BRACKET_LF", "BRACKET_RT", 
			"PARENTHESIS_LF", "PARENTHESIS_RT", "HAT", "COMMA", "VARNAME", "EQUAL", 
			"INTEGER", "DOUBLE", "PLUS", "MINUS", "MULTIPLICATION", "DIVISION", "NEWLINE_TAG", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ChatContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public List<EndContext> end() {
			return getRuleContexts(EndContext.class);
		}
		public EndContext end(int i) {
			return getRuleContext(EndContext.class,i);
		}
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(GrammarParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(GrammarParser.NEWLINE_TAG, i);
		}
		public ChatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chat; }
	}

	public final ChatContext chat() throws RecognitionException {
		ChatContext _localctx = new ChatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chat);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(173); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				start();
				setState(165);
				body();
				setState(166);
				end();
				setState(170);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(167);
						match(NEWLINE_TAG);
						}
						} 
					}
					setState(172);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				}
				setState(175); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==BEGIN || _la==NEWLINE_TAG );
			setState(177);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(GrammarParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(GrammarParser.NEWLINE_TAG, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE_TAG) {
				{
				{
				setState(179);
				match(NEWLINE_TAG);
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			begin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(GrammarParser.BEGIN, 0); }
		public TerminalNode CURLY_LF() { return getToken(GrammarParser.CURLY_LF, 0); }
		public EnvironmentContext environment() {
			return getRuleContext(EnvironmentContext.class,0);
		}
		public TerminalNode CURLY_RT() { return getToken(GrammarParser.CURLY_RT, 0); }
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(GrammarParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(GrammarParser.NEWLINE_TAG, i);
		}
		public BeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin; }
	}

	public final BeginContext begin() throws RecognitionException {
		BeginContext _localctx = new BeginContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_begin);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(BEGIN);
			setState(188);
			match(CURLY_LF);
			setState(189);
			environment();
			setState(190);
			match(CURLY_RT);
			setState(192); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(191);
					match(NEWLINE_TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(194); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public MatrixContext matrix() {
			return getRuleContext(MatrixContext.class,0);
		}
		public Math_functionContext math_function() {
			return getRuleContext(Math_functionContext.class,0);
		}
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(GrammarParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(GrammarParser.NEWLINE_TAG, i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(196);
				equation();
				}
				break;
			case 2:
				{
				setState(197);
				matrix();
				}
				break;
			case 3:
				{
				setState(198);
				math_function();
				}
				break;
			}
			setState(202); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(201);
				match(NEWLINE_TAG);
				}
				}
				setState(204); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE_TAG );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public TerminalNode EQUAL() { return getToken(GrammarParser.EQUAL, 0); }
		public Composed_operationsContext composed_operations() {
			return getRuleContext(Composed_operationsContext.class,0);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_equation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(VARNAME);
			setState(207);
			match(EQUAL);
			setState(208);
			composed_operations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatrixContext extends ParserRuleContext {
		public List<Matrix_lineContext> matrix_line() {
			return getRuleContexts(Matrix_lineContext.class);
		}
		public Matrix_lineContext matrix_line(int i) {
			return getRuleContext(Matrix_lineContext.class,i);
		}
		public List<TerminalNode> BREAKLINE() { return getTokens(GrammarParser.BREAKLINE); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(GrammarParser.BREAKLINE, i);
		}
		public MatrixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix; }
	}

	public final MatrixContext matrix() throws RecognitionException {
		MatrixContext _localctx = new MatrixContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_matrix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			matrix_line();
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BREAKLINE) {
				{
				{
				setState(211);
				match(BREAKLINE);
				setState(212);
				matrix_line();
				}
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_lineContext extends ParserRuleContext {
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public List<TerminalNode> JOIN() { return getTokens(GrammarParser.JOIN); }
		public TerminalNode JOIN(int i) {
			return getToken(GrammarParser.JOIN, i);
		}
		public Matrix_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_line; }
	}

	public final Matrix_lineContext matrix_line() throws RecognitionException {
		Matrix_lineContext _localctx = new Matrix_lineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_matrix_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			member();
			setState(223);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JOIN) {
				{
				{
				setState(219);
				match(JOIN);
				setState(220);
				member();
				}
				}
				setState(225);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_functionContext extends ParserRuleContext {
		public Math_function_defContext math_function_def() {
			return getRuleContext(Math_function_defContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(GrammarParser.EQUAL, 0); }
		public Composed_operationsContext composed_operations() {
			return getRuleContext(Composed_operationsContext.class,0);
		}
		public Math_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_function; }
	}

	public final Math_functionContext math_function() throws RecognitionException {
		Math_functionContext _localctx = new Math_functionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_math_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			math_function_def();
			setState(227);
			match(EQUAL);
			setState(228);
			composed_operations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_function_defContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public TerminalNode PARENTHESIS_LF() { return getToken(GrammarParser.PARENTHESIS_LF, 0); }
		public Math_function_argsContext math_function_args() {
			return getRuleContext(Math_function_argsContext.class,0);
		}
		public TerminalNode PARENTHESIS_RT() { return getToken(GrammarParser.PARENTHESIS_RT, 0); }
		public Math_function_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_function_def; }
	}

	public final Math_function_defContext math_function_def() throws RecognitionException {
		Math_function_defContext _localctx = new Math_function_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_math_function_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			match(VARNAME);
			setState(231);
			match(PARENTHESIS_LF);
			setState(232);
			math_function_args();
			setState(233);
			match(PARENTHESIS_RT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
